objects/ssot__EducationApplication__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicTermId__c</fullName>
        <label>Academic Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AmountPaidAmount__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicantEmailText__c</fullName>
        <label>Applicant Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicantPhoneText__c</fullName>
        <label>Applicant Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationId__c</fullName>
        <label>Application</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactId__c</fullName>
        <label>Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DecisionReleaseDate__c</fullName>
        <label>Decision Release Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Education Application Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningProgramId__c</fullName>
        <label>Learning Program</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityId__c</fullName>
        <label>Opportunity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentDateTime__c</fullName>
        <label>Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramTermApplnTimelineId__c</fullName>
        <label>Program Term Application Timeline</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubmittedByContactId__c</fullName>
        <label>Submitted By Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817599775_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EducationApplication_AcademicTermId__rel</label>
        <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
        <relationshipLabel>EducationApplication_AcademicTermId__rel</relationshipLabel>
        <relationshipName>rel_1719817599775_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818621044_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EducationApplication_ApplicationId_m_rel</label>
        <referenceTo>ssot__Application__dlm</referenceTo>
        <relationshipLabel>EducationApplication_ApplicationId_m_rel</relationshipLabel>
        <relationshipName>rel_1719818621044_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819617566_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EducationApplication_ProgramTermAppl_rel</label>
        <referenceTo>ssot__ProgramTermApplicationTimeline__dlm</referenceTo>
        <relationshipLabel>EducationApplication_ProgramTermAppl_rel</relationshipLabel>
        <relationshipName>rel_1719819617566_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>